# ulqr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  constants_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_e16ea9ff8491083a96a1650214434870.html  dir_e16ea9ff8491083a96a1650214434870.js  dir_e1cfc5297ee7ab3c75c0f593509ba5cf.html  dir_e1cfc5297ee7ab3c75c0f593509ba5cf.js  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  group__LinearAlgebra.html  group__LinearAlgebra.js  group__probdef.html  group__probdef.js  group__riccati.html  group__riccati.js  index.html  knotpoint_8h_source.html  linalg_8h_source.html  lqr__data_8h.html  lqr__data_8h.js  lqr__data_8h_source.html  matrix_8h.html  matrix_8h.js  matrix_8h_source.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  riccati__solve_8h.html  (+13 more)
.cache/clangd/index/: linalg.c.6568242016C50749.idx  linalg.h.0E9C98F683B6A298.idx  matrix.c.A4634D040A2B7317.idx  matrix.h.DABEC4AB14197CF4.idx  matrix_test.c.C0D30B289EB78CE3.idx  minunit.c.DF6830D7E359735C.idx  minunit.h.A7D47E9D35BEC07B.idx  simple_test.c.D1870D3EBE819E05.idx  simpletest.c.5227205C604F0ACF.idx  simpletest.c.B9B24AB502F8627E.idx  simpletest.h.64F3DCB505E0C384.idx  ulqr.cpp.E1602D0C8C6AAB30.idx
.github/workflows/: CI.yml  Formatting.yml
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
packaging/: ulqrConfig.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  groups_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
src/: CMakeLists.txt
src/lqr/: CMakeLists.txt  lqr_data.c  lqr_data.h
src/models/: CMakeLists.txt  double_integrator.c  double_integrator.h
src/riccati/: CMakeLists.txt  constants.h  knotpoint.c  knotpoint.h  lqr_data.c  lqr_data.h  riccati_solve.c  riccati_solve.h  riccati_solver.c  riccati_solver.h
src/slap/: CMakeLists.txt  linalg.c  linalg.h  matrix.c  matrix.h
test/: CMakeLists.txt  double_integrator_test.c  knotpoint_test.c  linalg_test.c  lqrdata_test.c  matrix_test.c  models_test.c  riccati_solver_test.c  simple_test.c  test_utils.c  test_utils.h
test/simpletest/: simpletest.c  simpletest.h
